@@ -130,6 +130,6 @@ If you get stuck, you can ask for help in the Plugin Forum.
 
 = 6.x.x - 2022-xx-xx =
 * Tweak - Use the newly exposed LoadableMask component provided by WooCommerce Blocks to trigger the loading state for Payment Request Buttons.
-
+* Add - Add filter call when updating an existent intent (wc_stripe_update_existing_intent_request).
 
 [See changelog for all versions](https://raw.githubusercontent.com/woocommerce/woocommerce-gateway-stripe/trunk/changelog.txt).
